[gd_scene load_steps=10 format=3 uid="uid://dqpih35yjrayn"]

[ext_resource type="Script" path="res://Scripts/1-SSB/shell_enemy.gd" id="1_e8pnm"]
[ext_resource type="Texture2D" uid="uid://cca8o3tgrkuc7" path="res://resources/01-SSB/graphics/Pixel Platformer/Tiles/Characters/armored_enemy_001.png" id="2_eijoc"]
[ext_resource type="Texture2D" uid="uid://vf0clqpxa78p" path="res://resources/01-SSB/graphics/Pixel Platformer/Tiles/Characters/armored_enemy_003.png" id="2_q8hjr"]
[ext_resource type="Texture2D" uid="uid://crklm7fdprl0u" path="res://resources/01-SSB/graphics/Pixel Platformer/Tiles/Characters/armored_enemy_002.png" id="3_lbt8v"]
[ext_resource type="AudioStream" uid="uid://b2m8x7rsdf3kn" path="res://resources/Sounds/EnemySteped.wav" id="5_oogoa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rp8uv"]
size = Vector2(24, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0iun3"]
size = Vector2(24, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xaknf"]
size = Vector2(34, 7)

[sub_resource type="SpriteFrames" id="SpriteFrames_k1mfm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_q8hjr")
}],
"loop": true,
"name": &"shield_mode",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_eijoc")
}, {
"duration": 1.0,
"texture": ExtResource("3_lbt8v")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[node name="Node2D" type="CharacterBody2D"]
script = ExtResource("1_e8pnm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_rp8uv")

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_0iun3")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_xaknf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_k1mfm")
animation = &"shield_mode"
autoplay = "shield_mode"

[node name="Steped" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_oogoa")

[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
